# eclipse-repro

./: .gitignore  BUILD.bazel  MODULE.bazel
